// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignMessage render should enable "Sign message" button 1`] = `
<div>
  <v-form-stub
    data-test="signing-message-form"
    id="signing-message-form"
    isformvalid="true"
  >
    <v-textarea-stub
      data-test="message-textarea"
      label="Message"
      placeholder="This is a message that you are signing to prove that you own the address you say you own."
      value="message"
    />
     
    <v-button-stub
      classname="is-primary is-medium"
      data-test="sign-button"
    >
      
      Sign message
    
    </v-button-stub>
     
    <!---->
  </v-form-stub>
   
  <!---->
</div>
`;

exports[`SignMessage render should render the initial state of the component 1`] = `
<div>
  <v-form-stub
    data-test="signing-message-form"
    id="signing-message-form"
    isformvalid="true"
  >
    <v-textarea-stub
      data-test="message-textarea"
      label="Message"
      placeholder="This is a message that you are signing to prove that you own the address you say you own."
      value=""
    />
     
    <v-button-stub
      classname="is-primary is-medium"
      data-test="sign-button"
      disabled="true"
    >
      
      Sign message
    
    </v-button-stub>
     
    <!---->
  </v-form-stub>
   
  <!---->
</div>
`;

exports[`SignMessage render should show modal window for password confirmation 1`] = `
<div>
  <v-form-stub
    data-test="signing-message-form"
    id="signing-message-form"
    isformvalid="true"
  >
    <v-textarea-stub
      data-test="message-textarea"
      label="Message"
      placeholder="This is a message that you are signing to prove that you own the address you say you own."
      value="message"
    />
     
    <v-button-stub
      classname="is-primary is-medium"
      data-test="sign-button"
    >
      
      Sign message
    
    </v-button-stub>
     
    <!---->
  </v-form-stub>
   
  <password-modal-stub
    title="Please enter your wallet password to continue"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        Message
      </label>
       
      <p>
        message
      </p>
    </div>
  </password-modal-stub>
</div>
`;

exports[`SignMessage render should show signed message 1`] = `
<div>
  <v-form-stub
    data-test="signing-message-form"
    id="signing-message-form"
    isformvalid="true"
  >
    <v-textarea-stub
      data-test="message-textarea"
      label="Message"
      placeholder="This is a message that you are signing to prove that you own the address you say you own."
      value=""
    />
     
    <v-button-stub
      classname="is-primary is-medium"
      data-test="sign-button"
      disabled="true"
    >
      
      Sign message
    
    </v-button-stub>
     
    <v-textarea-stub
      data-test="signed-message-textarea"
      disabled=""
      label="Signature"
      value="{\\"message\\":\\"message\\"}"
    />
  </v-form-stub>
   
  <!---->
</div>
`;
